Combatify 1.21.1 1.3.4 NeoForge - backport